Added the background

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDG1293-2024 Oblig 2</title>
-</head>
-<body>
-  <!-- Your implementation of the poster goes here. -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IDG1293-2024 Oblig 2</title>
+    <link rel="stylesheet" href="assets/styles/style.css" />
+  </head>
+  <body>
+    <img src="/assets/svgs/background-full.svg" alt="">
+    
+    <footer>
+      <div class="footer-white"></div>
+      <div class="footer-blue"></div>
+    </footer>
+  </body>
 </html>
