added .scss and some more adjustments

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDG1293-2024 Oblig 2</title>
-</head>
-<body>
-  <!-- Your implementation of the poster goes here. -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IDG1293-2024 Oblig 2</title>
+    <link rel="stylesheet" href="assets/styles/drawing.css" />
+  </head>
+  <body>
+    <!-- Your implementation of the poster goes here. -->
+    <div id="container-eyes">
+      <div class="left-eye">
+        <div class="left-eye-double"></div>
+
+        <div class="left-eye-glow left-positioning">
+          <div class="left-eye-glow"></div>
+        </div>
+      </div>
+
+
+
+      <div class="right-eye">
+        <div class="right-eye-double"></div>
+
+        <div class="right-eye-glow right-positioning">
+          <div class="right-eye-glow"></div>
+        </div>
+      </div>
+
+    
+    </div>
+  </body>
 </html>
