--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             }
           </style>
         </defs>
-        <g id="Layer_11">
+        <g class="Layer_11">
           <path
             class="star-1"
             d="M32.44,43.82c2.81-6.44-1.75-9.25-.73-21.36.33-3.92,1.48-17.46,8.21-19.8,7.28-2.53,17.83,9.17,20.38,12,8.29,9.2,8.51,16.02,14.24,17,4.48.77,5.67-3.18,14.35-5.3,3.46-.85,13.1-3.21,17.45,1.56,4.73,5.18.45,15.77.09,16.63-3.49,8.36-9.38,8.94-9.44,14.24-.06,5.16,5.51,5.92,9.44,14.35,2.22,4.76,4.94,14.15.85,18.39-4.56,4.73-15.69,1.1-19.69-.2-8.72-2.84-10.26-6.45-13.99-5.41-5.25,1.46-4.36,9.19-11.35,19.71-1.18,1.78-10.45,15.72-17.65,13.97-6.24-1.51-9-14.31-9.64-20.47-.92-8.76,1.43-13.73-1.58-16.02-2.79-2.12-6.05,1.19-13.36,1.07-6.78-.11-16.05-3.16-17.51-8.56-1.46-5.39,5.29-11.56,11.02-16.78,10.56-9.65,16.06-8.46,18.92-15.02Z"
@@ -57,9 +57,10 @@
         </g>
       </svg>
 
-      <div>
+      <div id="container-car">
         <!-- <?xml version="1.0" encoding="UTF-8"?> -->
-        <svg id="car-nowheels"
+        <svg
+          id="car-nowheels"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 300.87 189.04"
         >
@@ -79,62 +80,203 @@
           </defs>
           <g id="Layer_11">
             <path
-              class="cls-2"
+              class="cls-2 car-nowheels"
               d="M284.52,41.92c4.39,1.26,9.68-3.34,13.88-8.1-5.12-5.68-8.14-13.21-8.37-20.86-.55,1.27-3.57-1.05-4.87-.58-10.03-9.91-25.93-11.75-39.59-8.26-13.66,3.49-25.67,11.48-37.43,19.24-2.34,1.55-4.73,3.11-7.42,3.92-3.75,1.13-5.84,4.04-9.75,3.78-11.92-.8-50.04,5.02-56.02,6.63-18.89,5.1-91.03,46.91-128.32,90.38-5.32,6.2-5.07,17.24-1.29,24.49l17.64,33.78c7.74,1.19,18.13-5.12,17.69-7.16-.25-1.14-3.71-.33-6.45-1.74-9.82-5.06-14.03-40.5,5.62-52.31,12.7-7.63,30.46-2.44,39.68,6.84,8.96,9.01,11.02,23.34,11.02,23.34l146.04-84.09s-10.47-11.46-11.54-24.25c-.79-9.43,2.46-24.23,15.33-31.24,9.54-5.19,22.64-5.17,30.41,1.27,9.83,8.15,6.73,22.9,13.75,24.91Z"
             />
             <path
-              class="cls-1"
+              class="cls-1 car-nowheels"
               d="M283.85,44.34c6.55,1.63,12.39-4.33,16.32-8.74.94-1.05.94-2.48,0-3.54-4.67-5.26-7.38-12.07-7.64-19.09-.09-2.47-3.34-3.41-4.66-1.26l1.77-.8-.26-.06c-.12-.09-.41-.13-.56-.17-.45-.15-.89-.34-1.34-.49-.99-.32-1.98-.46-3-.21l2.43.64C278.46,2.38,266.33-.7,254.77.13c-13.09.94-25.12,6.75-36.15,13.51-2.95,1.81-5.85,3.69-8.73,5.58-2.73,1.8-5.45,3.9-8.48,5.17-1.48.62-3,1.02-4.43,1.79-1.2.64-2.34,1.49-3.61,2.01-1.57.63-3.32.31-4.97.31-8.22,0-16.49,1.07-24.64,2.09s-16.48,2.2-24.65,3.7c-4.66.85-8.92,2.26-13.27,4.13-15.65,6.72-30.46,15.69-44.75,24.88-19.1,12.29-37.54,25.81-54.45,41-4.14,3.72-8.18,7.54-12.08,11.5s-7.73,7.62-10.82,11.94c-5.44,7.6-4.43,18.67-.31,26.58,5.5,10.56,11.02,21.11,16.54,31.67.26.5.49,1.02.78,1.5,1.1,1.81,3.79,1.61,5.67,1.45,4.86-.42,9.87-2.27,13.77-5.23,1.38-1.05,2.94-2.43,2.99-4.3.08-3.19-3.32-3.24-5.58-3.55-.89-.12-1.77-.32-2.54-.79-.14-.08-.85-.64-.31-.19-.23-.19-.45-.39-.66-.59-.22-.22-.42-.46-.64-.69-.46-.5.05.14-.34-.44s-.79-1.2-1.13-1.83c-.83-1.54-1.13-2.33-1.67-4.04s-.96-3.49-1.26-5.28c-.61-3.6-.73-7.8-.39-11.67.69-7.81,3.61-15.92,9.78-21.15,8.03-6.8,20-6.31,29.16-2.24,4.8,2.13,9.22,5.23,12.45,9.41,2.98,3.86,5.05,8.43,6.49,13.07.66,2.14,1.26,4.34,1.58,6.56.24,1.64,2.42,2.22,3.67,1.49,4.87-2.8,9.74-5.61,14.61-8.41,11.6-6.68,23.2-13.36,34.81-20.04,14.07-8.1,28.14-16.2,42.2-24.3,12.16-7,24.32-14,36.47-21,5.88-3.39,11.92-6.6,17.69-10.19.08-.05.17-.1.26-.15,1.45-.83,1.58-2.75.51-3.93-1.45-1.6-2.22-2.67-3.46-4.48-2.47-3.6-4.61-7.49-5.97-11.65-2.4-7.34-1.82-15.57,1.25-22.64,3.66-8.41,10.95-14.06,19.95-15.74s18.7.82,23.18,9.1c2.02,3.73,2.77,7.92,3.99,11.94,1.08,3.57,2.75,7.13,6.58,8.33,3.08.96,4.4-3.87,1.33-4.82-.57-.18-.66-.21-1.04-.61-.11-.11-.58-.69-.36-.38-.24-.33-.45-.69-.64-1.05-.61-1.17-1.1-2.89-1.53-4.45-1.14-4.16-2.19-8.38-4.39-12.14-5.29-9.04-16.07-12.37-26.05-11.11s-19.36,7.02-24.28,16.22c-4.01,7.49-5.52,16.66-3.8,25.01,1.65,8.02,6.19,15.96,11.69,22.01l.51-3.93c-4.87,2.8-9.74,5.61-14.61,8.41-11.6,6.68-23.2,13.36-34.81,20.04-14.07,8.1-28.14,16.2-42.2,24.3-12.16,7-24.32,14-36.47,21-4,2.3-7.99,4.6-11.99,6.9-1.88,1.08-3.92,2.05-5.7,3.28-.08.06-.17.1-.26.15l3.67,1.49c-1.19-8.16-4.83-16.59-10.18-22.84-7.59-8.86-20.56-13.9-32.14-12.69-10.69,1.12-19.39,7.65-23.62,17.49-3.63,8.44-4.32,18-2.73,26.99.71,4.02,1.95,8.19,4.22,11.62.99,1.49,2.15,2.83,3.62,3.86,1.05.74,2.31,1.22,3.56,1.47.89.18,1.8.26,2.7.35.2.02.51.09.7.07.32-.04.03.14-.24-.19l-.64-1.1c-.19-.48.05-.82.16-1.08-.05.14-.39.5,0,.05-.23.27-.88.86-.9.88-1.2.96-2.6,1.7-3.98,2.35-2.92,1.38-6.55,2.48-9.82,2.04l1.49,1.15c-3.48-6.66-6.96-13.32-10.43-19.98-2-3.82-3.99-7.64-5.99-11.47-1.85-3.55-3.33-7.09-3.6-11.17-.24-3.57.18-7.36,1.91-10.55s4.52-5.69,6.91-8.25c5.27-5.64,10.83-10.99,16.58-16.13,11.97-10.72,24.72-20.54,37.9-29.73,11.88-8.29,24.12-16.08,36.73-23.23,5.02-2.85,10.11-5.6,15.29-8.15,2.11-1.04,4.23-2.05,6.38-3.01.45-.2.91-.4,1.36-.6.24-.1.47-.2.71-.3-.43.18.14-.06.29-.12.85-.35,1.7-.69,2.57-1.01,2.75-1.03,5.51-1.69,8.39-2.22,5.31-.98,10.65-1.79,16-2.55,6.35-.9,12.71-1.7,19.09-2.32,5.03-.49,10.14-.99,15.19-.76,1.89.08,3.57-.18,5.31-.95s3.12-1.88,4.79-2.58c2.3-.97,4.53-1.72,6.67-3.04,1.99-1.23,3.93-2.56,5.89-3.85,7.85-5.15,15.88-10.28,24.63-13.77,7.94-3.17,16.3-4.9,24.86-4.16,3.91.34,7.84,1.25,11.46,2.77s6.46,3.7,9.37,6.21c.64.55,1.28.73,2.1.69.69-.03-.32-.24.24.03s1.31.48,1.92.67c1.72.55,3.53.34,4.54-1.31l-4.66-1.26c.31,8.39,3.53,16.35,9.1,22.62v-3.54c-1.81,2.03-3.73,4.08-5.98,5.65-1.55,1.08-3.51,2.3-5.47,1.81-3.12-.78-4.45,4.04-1.33,4.82Z"
             />
             <path
-              class="cls-1"
+              class="cls-1 car-nowheels"
               d="M186.74,43.23c-28.52,14.63-62.85,33.37-92,46.68-11.39,5.2-22.87,10.31-34.9,13.8,10.5-16.52,28.09-26.94,45.03-36.75,12.05-6.98,24.19-14,37.26-18.79,4.71-1.73,29.8-6.32,44.61-4.94Z"
             />
           </g>
         </svg>
-        <!-- <?xml version="1.0" encoding="UTF-8"?> -->
+          <svg
+            id="wheel-front"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 43.92 44.93"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: #231f20;
+                  stroke: #231f20;
+                  stroke-miterlimit: 10;
+                  stroke-width: 4.21px;
+                }
+              </style>
+            </defs>
+            <g id="Layer_11">
+              <path
+                class="cls-1 wheel-front"
+                d="M37.37,36.67c-8.24,8.78-24.29,8.01-32.11-1.33C-6.59,17.02,17.52-7.97,34.7,6.35c8.89,6.78,9.06,22.1,2.67,30.32Z"
+              ></path>
+            </g>
+          </svg>
+          
+          <svg
+            id="wheel-back"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50.02 52.12"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: #231f20;
+                  stroke: #231f20;
+                  stroke-miterlimit: 10;
+                  stroke-width: 4.21px;
+                }
+              </style>
+            </defs>
+            <g id="Layer_11">
+              <path
+                class="cls-1 wheel-back"
+                d="M47.64,32.05c-3.57,13.51-20.38,21.58-33.51,16.37C-8.08,36.26,2.73-2.56,28.17,2.57c12.82,2.01,21.45,17.56,19.46,29.48Z"
+              />
+            </g>
+          </svg>
+        
+      </div>
+
+      <div id="container-people">
         <svg
-          id="wheel-front"
+          id="child-L"
           xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 43.92 44.93"
+          viewBox="0 0 366.29 416.6"
         >
           <defs>
             <style>
-              .cls-1 {
+              .cls-1,
+              .cls-2 {
+                stroke-width: 0px;
+              }
+              .cls-1,
+              .cls-3 {
                 fill: #231f20;
-                stroke: #231f20;
+              }
+              .cls-4 {
+                fill: #f5ec43;
+              }
+              .cls-4,
+              .cls-5,
+              .cls-6,
+              .cls-7,
+              .cls-8,
+              .cls-3 {
                 stroke-miterlimit: 10;
-                stroke-width: 4.21px;
+              }
+              .cls-4,
+              .cls-5,
+              .cls-6,
+              .cls-8,
+              .cls-3 {
+                stroke: #231f20;
+              }
+              .cls-4,
+              .cls-5,
+              .cls-7,
+              .cls-8,
+              .cls-3 {
+                stroke-width: 4.6px;
+              }
+              .cls-5 {
+                fill: #b6a69e;
+              }
+              .cls-6 {
+                fill: #a1cf6d;
+                stroke-width: 4.6px;
+              }
+              .cls-7 {
+                fill: none;
+                stroke: #fff;
+              }
+              .cls-2 {
+                fill: #fff;
+              }
+              .cls-8 {
+                fill: #ad9282;
               }
             </style>
           </defs>
-          <g id="Layer_11">
+          <g id="child-L">
             <path
-              class="cls-1"
-              d="M37.37,36.67c-8.24,8.78-24.29,8.01-32.11-1.33C-6.59,17.02,17.52-7.97,34.7,6.35c8.89,6.78,9.06,22.1,2.67,30.32Z"
+              class="cls-8 child-left"
+              d="M5.47,116.04c-8.88-7.89,2.62-23.89,13.14-19.16,5.51,3.35,7.01,12.36,3.11,17.45-3.76,4.06-11.99,5.84-16.25,1.71Z"
             />
-          </g>
-        </svg>
-        <!-- <?xml version="1.0" encoding="UTF-8"?> -->
-        <svg
-          id="wheel-back"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 50.02 52.12"
-        >
-          <defs>
-            <style>
-              .cls-1 {
-                fill: #231f20;
-                stroke: #231f20;
-                stroke-miterlimit: 10;
-                stroke-width: 4.21px;
-              }
-            </style>
-          </defs>
-          <g id="Layer_11">
             <path
-              class="cls-1"
-              d="M47.64,32.05c-3.57,13.51-20.38,21.58-33.51,16.37C-8.08,36.26,2.73-2.56,28.17,2.57c12.82,2.01,21.45,17.56,19.46,29.48Z"
+              class="cls-1 child-left"
+              d="M250.79,297.31c7.03,7.35,13.73,15.18,19.81,23.33,7.76,10.41,13.1,22.64,17.81,34.66,3.07,7.84,5.84,15.8,8.6,23.76.44,1.28,1.71,2.12,3.08,1.75,1.24-.34,2.19-1.79,1.75-3.08-4.98-14.36-10-28.77-16.74-42.42-2.73-5.53-5.66-11.02-9.3-16.01-3.26-4.49-6.78-8.79-10.36-13.03s-7.25-8.47-11.11-12.5c-2.23-2.33-5.76,1.21-3.54,3.54h0Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M182.1,308.31c2.34,10.6,3.7,21.5,4.75,32.29.53,5.44.6,10.89,1.09,16.33.66,7.41,2.12,14.71,4.12,21.86,2.26,8.08,5.14,15.97,7.95,23.88.45,1.27,1.71,2.12,3.08,1.75,1.23-.34,2.2-1.8,1.75-3.08-4.94-13.87-10.14-27.87-11.72-42.61-.6-5.59-.62-11.22-1.14-16.82-.56-5.97-1.3-11.93-2.14-17.87s-1.68-11.43-2.92-17.07c-.69-3.14-5.51-1.81-4.82,1.33h0Z"
+            />
+            <path
+              class="cls-6 child-left"
+              d="M158.14,256.75c.03,15.27-.57,49.37-.54,64.64,13.56-8.81,31.45-10.55,46.45-4.52.16-13.53,2.3-27.03,6.34-39.94,5.35,13.56,10.07,27.38,14.12,41.38,15.22-10.95,33.38-17.77,52.04-19.56-5.51-12.27-11.03-24.54-16.54-36.81-.68-1.51-8.99-15.17-10.42-16-2.3-1.34-20.84-23.33-50.64-17.77-12.66,2.37-22.09,21.58-40.83,28.58Z"
+            />
+            <path
+              class="cls-4 child-left"
+              d="M90.38,143.55c13.75,15.27,43.53,24.91,51.76,43.74,2.05,4.7,2.94,9.81,3.67,14.88,2.77,19.28,3.46,38.85,2.07,58.28,34.78-12.77,73.3-25.59,107.95-12.45,3.67-4.59,1.62-11.31-.67-16.72-6.96-16.39-14.86-32.39-23.64-47.88,9.52,2.9,19.03,5.8,28.55,8.7.75-8.93,6.92-29.49,7.67-38.42-17.02-10.59-39.44-9.53-56.46-20.12-8.8,10.44-24.58,11.16-38.09,9.14-19.49-2.91-38.38-9.81-55.16-20.14-2.19-1.35-4.62-2.81-7.15-2.35-1.79.33-3.25,1.58-4.58,2.82-6.34,5.94-11.74,12.89-15.92,20.51Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M202.43,402.01c-10.81-9.46-28.26-12.4-42.61-12.97-9.56-.37-19.18,1.49-27.94,5.31-6.47,2.82-6.67,11.92-.37,15.1,9.06,4.58,19.18,7.09,29.34,7.14,14.98.08,29.94-5.17,41.58-14.59Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M300.14,379.26c.05-2.98,2.12-5.5,4.09-7.73,13.67-15.55,29-31.52,49.17-36.23.86-.2,1.77-.38,2.6-.1,1.88.62,2.34,3.08,2.18,5.06-.74,8.75-7.18,15.9-13.88,21.58-12.49,10.59-28.25,18.92-44.55,17.32l.39.11Z"
+            />
+            <path
+              class="cls-5 child-left"
+              d="M227.21,38.45c14.83,32.61-4.7,79.78-38.93,91.07-63.28,12.52-105.69-89.13-47.41-120.87,28.44-17.12,70.98,2.94,86.34,29.8Z"
+            />
+            <path
+              class="cls-3 child-left"
+              d="M201.72,86.97c17.18-5.89,15.47-43.67-5.17-44.22-24.18,1.73-22.98,51.59,5.17,44.22Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M138.48,42.41c-14.38,11.17-18.98,44.89,2.47,47.28.93.1,1.87.19,2.8.32,32.66,4.33,28.82-51.24.19-49.62-1.98.11-3.9.8-5.46,2.02Z"
+            />
+            <path
+              class="cls-2 child-left"
+              d="M148.31,85.45c8.1.34,11.16-8.95,9.02-10.94-6.23-6.03-14.16-10.44-22.77-7.14,0,0-1.92.57-2.01,2.77-.36,8.56,1.3,14.69,15.76,15.3Z"
+            />
+            <path
+              class="cls-2 child-left"
+              d="M142.85,46.03c-9.99,4.57-3.35,9.3,2.91,9.56,2.67.11,4.52-1.09,6.36-2.61,2.05-1.69,1.63-5.25-.75-6.18-2.84-1.1-6.56-1.47-8.53-.76Z"
+            />
+            <path
+              class="cls-2 child-left"
+              d="M185.41,76.65c.67,2.76,3.14,4.38,5.78,5.48,2.9,1.2,6.07,1.52,9.14.9,24.07-4.89-27.03-32.52-14.92-6.38Z"
+            />
+            <path
+              class="cls-2 child-left"
+              d="M202.67,52.94c.57-1.59.08-3.38-1.23-4.46-7.74-6.39-23.15,9.87-5.89,10.8,3.64,0,5.95-3.11,7.12-6.34Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M265.01,176.12c12.61.19,25.13,1.86,37.35,4.98,1.21.31,2.84-.39,3.08-1.75,3.15-18.08,6.29-36.16,9.44-54.24.23-1.33-.36-2.69-1.75-3.08-1.2-.33-2.84.41-3.08,1.75-3.15,18.08-6.29,36.16-9.44,54.24l3.08-1.75c-12.63-3.22-25.64-4.96-38.68-5.16-3.22-.05-3.22,4.95,0,5h0Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M94.24,128.49c-17.52-5.79-35.31-10.79-53.29-14.93-5.1-1.18-10.22-2.29-15.36-3.33-1.32-.27-2.7.38-3.08,1.75-.34,1.23.42,2.8,1.75,3.08,18.09,3.68,36,8.19,53.67,13.52,5.01,1.51,10.01,3.1,14.98,4.74,3.06,1.01,4.37-3.81,1.33-4.82h0Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M287.26,98.34c-2.5,9.46-6.01,19.28-3.67,28.79.53,2.14,1.45,4.34,3.29,5.56,1.37.9,3.05,1.14,4.68,1.36,13.21,1.76,26.43,3.51,39.64,5.27,1.79.24,3.67.47,5.35-.2,2.34-.93,3.7-3.33,4.78-5.61,11.09-23.37,11.96-50.23,19.83-74.87,2.54-7.95,5.06-18.41-1.78-23.2-2.17-1.52-4.87-2.02-7.48-2.46-16.04-2.68-28.42-5.63-44.67-5.83-2.12-.03-4.36,0-6.16,1.11-1.99,1.23-3.02,3.53-3.85,5.72-2.42,6.38-5.88,48.99-9.95,64.35Z"
+            />
+            <path
+              class="cls-1 child-left"
+              d="M284.85,97.67c-1.78,6.7-3.95,13.37-4.44,20.33-.39,5.55.06,13.93,5.56,17.06,2.93,1.67,6.79,1.65,10.05,2.08,3.63.48,7.27.97,10.9,1.45,7.1.94,14.21,1.89,21.31,2.83,3.4.45,7.05,1.3,10.23-.45,2.54-1.4,4.04-4.07,5.23-6.6,2.72-5.79,4.88-11.83,6.64-17.97,3.56-12.39,5.59-25.15,8.27-37.74,1.34-6.3,2.84-12.57,4.77-18.72,1.54-4.91,3.09-10.05,2.91-15.25-.18-5.38-2.62-10.32-7.75-12.53-2.94-1.27-6.16-1.6-9.29-2.15-3.3-.57-6.6-1.17-9.9-1.76-6.23-1.11-12.48-2.14-18.78-2.8-3.32-.35-6.65-.59-9.99-.72-3.11-.11-6.54-.44-9.49.75-6.66,2.7-7.34,11.75-8.22,17.89-2.41,16.73-3.66,33.49-7.04,50.02-.29,1.43-.61,2.86-.98,4.28-.82,3.11,4,4.44,4.82,1.33,1.81-6.9,2.74-14.06,3.71-21.12,1.18-8.57,2.21-17.16,3.31-25.75.12-.92.24-1.85.36-2.77.14-1.04.17-1.26.3-2.22.22-1.64.46-3.28.71-4.91.34-2.23.67-4.5,1.27-6.68.39-1.41.98-2.91,1.87-4.08,1.55-2.04,4.19-1.86,6.5-1.83,6.11.1,12.22.6,18.27,1.45s12.03,1.96,18.03,3.03c3.09.55,6.22.99,9.29,1.63,2.32.48,4.69,1.25,6.19,3.14,2.52,3.19,1.99,8.09,1.19,11.97-1.09,5.29-3.02,10.39-4.37,15.62-3.05,11.78-4.97,23.81-7.58,35.69-1.3,5.9-2.77,11.77-4.63,17.52-.95,2.93-2,5.84-3.19,8.69-.97,2.33-1.93,5.03-3.53,7.02-1.83,2.28-4.59,1.61-7.16,1.27-3.3-.44-6.61-.88-9.91-1.32-6.86-.91-13.71-1.82-20.57-2.73-3.16-.42-6.43-.65-9.55-1.33-2.6-.57-3.58-2.39-4.19-4.84-1.51-6.07-.31-12.42,1.2-18.36.78-3.05,1.66-6.06,2.47-9.1s-3.99-4.44-4.82-1.33Z"
+            />
+            <path
+              class="cls-7 child-left"
+              d="M347.93,72.64c-9.86.93-15.66-11.08-15.93-19.7,8.09,93.97-59.35,40.66-15.72,25.08"
             />
           </g>
         </svg>
