Animeted three elements in the middle

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
   <body>
     <div class="main">
       <img src="/assets/svgs/GOD PLEASE.svg" alt="" />
+      <figure class="child-left__container">
+        <img
+          class="child-left"
+          src="assets/svgs/child-left-rotated.svg"
+          alt=""
+        />
+      </figure>
+      <figure class="child-middle__container">
+        <img class="child-middle" src="assets/svgs/child-middle.svg" alt="" />
+      </figure>
+      <figure class="child-right__container">
+        <img class="child-right" src="assets/svgs/child-right.svg" alt="" />
+      </figure>
+      <img class="image-moon" src="assets/svgs/moon.svg" alt="" />
+
       <div class="header-container">
         <h1 class="header-headline">
           Vær en <br /><b class="enviroment">miljø</b>detektiv
