Finished background and children animation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,55 @@
   </head>
   <body>
     <div class="main">
-      <img src="/assets/svgs/GOD PLEASE.svg" alt="" />
+      <img src="assets/svgs/background.svg" alt="" />
+      <img id="goblin-big" src="assets/svgs/goblin-big.svg" alt="" />
+      <img class="goblin-middle" id="goblin-middle-left" src="assets/svgs/goblin-middle.svg" alt="" />
+      <img class="goblin-middle"
+        id="goblin-middle-right"
+        src="assets/svgs/goblin-middle.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__far-left"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__middle-far-left"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__middle-left"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__middle-bottom"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__middle"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__right-middle"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__far-right"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+      <img class="goblin-small"
+        id="goblin-small__right-bottom"
+        src="assets/svgs/goblin-small.svg"
+        alt=""
+      />
+
       <figure class="child-left__container">
         <img
           class="child-left"
