--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IDG1293-2024 Oblig 2</title>
-    <link rel="stylesheet" href="assets/styles/drawing.css" />
+    <link rel="stylesheet" href="assets/styles/style.css"/>
   </head>
   <body>
     <!-- Your implementation of the poster goes here. -->
